# locobot

./: .gitignore  .gitmodules  catkin_config.yaml
camera_calibration/: calc_apriltag.py  calibration.py  get_data.py  odometry_data.npy  pose.txt  save_image.py  tag_poses.npy  tf_listener.py
custom_pkgs/locobot/: CMakeLists.txt  package.xml
custom_pkgs/locobot/config/carto/: locobot.lua  locobot_mapping.lua  locobot_relocalization.lua
custom_pkgs/locobot/config/laser_filters/: laser_config.yaml
custom_pkgs/locobot/config/mvbase/: common_costmap_params.yaml  global_costmap_all_params.yaml  global_planner_params.yaml  local_costmap_all_params.yaml  local_planner_params.yaml  move_base_params.yaml
custom_pkgs/locobot/config/realsense/: d455_calibration.yaml
custom_pkgs/locobot/config/vins/: cam0.yaml  cam1.yaml  d455_config_raw.yaml  d455_stereo_config.yaml
custom_pkgs/locobot/launch/: apriltag.launch  bowl_demo.launch  carto.launch  carto_localization.launch  carto_mapping.launch  carto_slam.launch  d455_t265.launch  joy.launch  laser_filters.launch  lidar_undistortion.launch  locobot.launch  locobot_debug.launch  move_base.launch  mvbase.launch  pure_nav.launch  rplidar.launch
custom_pkgs/locobot/maps/0420/: map.pbstream  map.pgm  map.yaml
custom_pkgs/locobot/maps/0422/: map.pbstream  map.pgm  map.yaml
custom_pkgs/locobot/maps/719/: map.pbstream  map.pgm  map.yaml
custom_pkgs/locobot/maps/719_0906/: map.pbstream  map.pgm  map.yaml
custom_pkgs/locobot/maps/903/: map.pbstream  map.pgm  map.yaml
custom_pkgs/locobot/scripts/: FBI.py  FBI_changkun.py  all_control.py  arm_control.py  bowl_demo.py  camera_control.py  camera_info_publisher.py  chassis_control.py  demo.py  grasp_demo.py  gripper_control.py  pose_estimate.py  reset.py  test.py  test_moveit.py  vlm.py  wbc.py
custom_pkgs/locobot/srv/: SetFloat32.srv  SetPose.srv  SetPose2D.srv  SetPoseArray.srv  setgoal.srv  setrad.srv
custom_pkgs/locobot/urdf/: imu.urdf.xacro  locobot.urdf
hr_recorder/: move_base_test.py  recoder_online.py
rgbd_plane_detection/: CMakeLists.txt  package.xml
rgbd_plane_detection/include/: plane_detection.h
rgbd_plane_detection/include/MRF2.2/: example
rgbd_plane_detection/src/: main.cpp  plane_detection.cpp
rgbd_plane_detection/srv/: plane_detector.srv
(+18 files in other folders)
