<?xml version="1.0"?>
<package format="2">
  <name>locobot</name>
  <version>0.0.0</version>
  <description>The locobot package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="locobot@todo.todo">locobot</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>interbotix_xs_sdk</depend>
  <depend>interbotix_xs_modules</depend>
  <depend>interbotix_xslocobot_descriptions</depend>
  <depend>interbotix_xslocobot_control</depend>
  <depend>realsense2_camera</depend>
  <depend>rgbd_launch</depend>
  <depend>rplidar_ros</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
